<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerUsernameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginTop="@dimen/firstbox_layout_marginTop"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:hint="@string/username" />

        <TextView
            android:id="@+id/registerUsernameAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/design_default_color_error" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsernameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:hint="@string/password" />


        <TextView
            android:id="@+id/registerPasswordAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:text=""
            android:textColor="@color/design_default_color_error" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerConfirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerConfirmPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_border"
            android:hint="@string/confirm_password" />

        <TextView
            android:id="@+id/registerConfirmPasswordAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:text="@string/confirm_password_alert"
            android:textColor="@color/design_default_color_error" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/header_marginStart"
        android:layout_marginTop="@dimen/header_marginTop"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="@dimen/header_fontSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/registerBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_margin"
        android:layout_marginTop="@dimen/general_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        />

    <TextView
        android:id="@+id/registerErrMsg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/button_marginStart"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:layout_marginBottom="@dimen/margin_between_button"
        android:background="@drawable/error_shape"
        android:gravity="center"
        android:text="Invalid Username/Password"
        android:textColor="@color/design_default_color_error"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegisterConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRegisterConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_marginStart"
        android:layout_marginEnd="@dimen/button_marginEnd"
        android:layout_marginBottom="@dimen/button_marginButton"
        android:background="@drawable/button_shape"
        android:text="@string/button_register_text"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>